let different users has different todo list

--- a/views/layout/nav.jade
+++ b/views/layout/nav.jade
@@ -21,9 +21,9 @@ html(lang='en')
               #myNavbar.collapse.navbar-collapse
                 ul.nav.navbar-nav
                   li.active
-                    a(href='#') 首頁
+                    a(href='/') 首頁
                   li
-                    a(href='/todo/todo') 待辦事項(Todo List)
+                    a(href='/todo') 待辦事項(Todo List)
                   li
                     a(href='#') 頁2
                   li
